# geodata

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  autoformat.sh  build-debug.sh  build-release.sh
data/: data_points_clean.csv  test_detectInvalidCoord.css  test_detectInvalidCoord_clean.css  test_detectNoMovement_clean.css  test_detectSingleValidPair.css  test_detectSingleValidPair_clean.css  test_detectZeroValidPair.css  test_detectZeroValidPair_clean.css
src/app/: Csv.cpp  Csv.h  Geo.cpp  Geo.h  app.cpp  app.h  main.cpp
src/e2etests/app/: testApp.cpp
src/unittests/: main.cpp  testCsv.cpp  testGeo.cpp
